* Bug #36177: fix file uploads due to cherrypy API change
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54478 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.46-1) unstable; urgency=low
+
+  * Bug #36177: fix file uploads due to cherrypy API change
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 17:33:46 +0200
+
 univention-management-console-frontend (4.1.45-1) unstable; urgency=low
 
   * Bug #35654: Add Page.navButtons
