* [WIP] adaption of design (Bug #36095)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54479 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.0-2) unstable; urgency=low
+
+  * [WIP] adaption of design (Bug #36095)
+
+ -- Drees Dormann <dormann@univention.de>  Wed, 15 Oct 2014 17:37:50 +0200
+
 univention-apache (7.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147) 
