* [WIP] Bug #36095: add background image with translucent pattern
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54482 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.2-1) unstable; urgency=medium
+
+  * [WIP] Bug #36095: add background image with translucent pattern
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 15 Oct 2014 18:38:56 +0200
+
 univention-apache (7.0.1-1) unstable; urgency=medium
 
   * [WIP] Bug #36095: fix footer and include rules for category buttons
