* Bug #33241: Do not use umask 0077 for UMC
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54484 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.1.12-2) unstable; urgency=low
+
+  * Bug #33241: Do not use umask 0077 for UMC
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 15 Oct 2014 14:10:25 +0200
+
 univention-management-console (7.1.12-1) unstable; urgency=low
 
   * Bug #35654: remove Form.scrollable in module templates, fix favorites for
