* Switch to OpenJDK 7 (Bug #35382)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54486 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-java/debian/changelog
+++ b/desktop/univention-java/debian/changelog
@@ -1,3 +1,9 @@
+univention-java (7.0.1-1) unstable; urgency=medium
+
+  * Switch to OpenJDK 7 (Bug #35382)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 15 Oct 2014 20:33:39 +0200
+
 univention-java (7.0.0-2) unstable; urgency=low
 
   * Removed dependency ia32-libs-gtk [amd64] (Bug #35266)
