* Bug #35654: small fixes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54487 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.47-1) unstable; urgency=low
+
+  * Bug #35654: small fixes
+
+ -- Florian Best <best@univention.de>  Wed, 15 Oct 2014 20:56:39 +0200
+
 univention-management-console-frontend (4.1.46-1) unstable; urgency=low
 
   * Bug #36177: fix file uploads due to cherrypy API change
