--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,10 @@
+univention-dvd (0.2.1-1) unstable; urgency=medium
+
+  * Added several packages to maintained for a smooth updat from UCS 3
+    to UCS 4 (Bug #36206)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 16 Oct 2014 06:38:05 +0200
+
 univention-dvd (0.2.0-15) unstable; urgency=low
 
   * Bug #35406: Include (non-)free firmware files on DVD
