* 00_base/25check-permissions: Also add /run/umc-server.pid.lock to   the ignore list (Bug #35880)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54492 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.26-1) unstable; urgency=medium
+
+  * 00_base/25check-permissions: Also add /run/umc-server.pid.lock to
+    the ignore list (Bug #35880)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 16 Oct 2014 06:43:20 +0200
+
 ucs-test (5.0.25-1) unstable; urgency=medium
 
   * Test for Bug #31907
