--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.27-1) unstable; urgency=medium
+
+  * 43_proxy/02_squid3_without_cache_restart: Merge r54351 from UCS 3.2:
+    Bug #35909: adding package dependency univention-squid
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 16 Oct 2014 06:47:01 +0200
+
 ucs-test (5.0.26-1) unstable; urgency=medium
 
   * 00_base/25check-permissions: Also add /run/umc-server.pid.lock to
