updated config files (Bug #33278)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54496 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.4-1) unstable; urgency=low
+
+  * updated config files (Bug #33278) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 10:46:36 +0200
+
 univention-printserver (8.0.3-1) unstable; urgency=low
 
   * Bug #35654: UMC design adaptions
