--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-7) unstable; urgency=low
+
+  * Added a context menu entry to edit a cloud connection (Bug #36139) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 16 Oct 2014 10:51:56 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-6) unstable; urgency=low
 
   * After libcloud update: Do not maintain own NodeState class (Bug #35824) 
