Updated config files (Bug #36114)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-dansguardian/debian/changelog
+++ b/services/univention-dansguardian/debian/changelog
@@ -1,3 +1,9 @@
+univention-dansguardian (8.0.0-2) unstable; urgency=low
+
+  * Updated config files (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 11:31:21 +0200
+
 univention-dansguardian (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #36114)
