--- a/services/univention-ftp/debian/changelog
+++ b/services/univention-ftp/debian/changelog
@@ -1,3 +1,9 @@
+univention-ftp (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 11:33:47 +0200
+
 univention-ftp (5.0.1-5) unstable; urgency=low
 
   * fixed firewall settings (Bug #23577)
