--- a/services/univention-log-collector/debian/changelog
+++ b/services/univention-log-collector/debian/changelog
@@ -1,3 +1,9 @@
+univention-log-collector (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 11:37:16 +0200
+
 univention-log-collector (7.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
