--- a/services/univention-snmpd/debian/changelog
+++ b/services/univention-snmpd/debian/changelog
@@ -1,3 +1,9 @@
+univention-snmpd (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 11:51:26 +0200
+
 univention-snmpd (5.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
