Update to UCS 4.0 (Bug #36114)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54511 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-snmp/debian/changelog
+++ b/services/univention-snmp/debian/changelog
@@ -1,3 +1,9 @@
+univention-snmp (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 11:55:49 +0200
+
 univention-snmp (4.0.1-3) unstable; urgency=low
 
   * Fix dependencies on u-c (Bug #22668)
