Update to UCS 4.0 (Bug #36114)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54517 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-tftp/debian/changelog
+++ b/services/univention-tftp/debian/changelog
@@ -1,3 +1,9 @@
+univention-tftp (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 12:11:17 +0200
+
 univention-tftp (5.0.2-1) unstable; urgency=low
 
   * added pxelinux configs (Bug #20014) 
