--- a/services/univention-printquota/debian/changelog
+++ b/services/univention-printquota/debian/changelog
@@ -1,3 +1,9 @@
+univention-printquota (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 12:16:28 +0200
+
 univention-printquota (6.0.2-4) unstable; urgency=low
 
   * made univention-prinquota executable (Bug #33791) 
