--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.6-7) unstable; urgency=medium
+
+  * Bug #31907: Don't load the ppolicy overlay by default.
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Oct 2014 13:12:21 +0200
+
 univention-ldap (11.0.6-6) unstable; urgency=medium
 
   * Bug #31907: Reduce pwdFailureCountInterval to 15 minutes
