* Bug #35653: Fix domainname for systems that do not want to join
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54527 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.14-2) unstable; urgency=low
+
+  * Bug #35653: Fix domainname for systems that do not want to join
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 16 Oct 2014 13:46:45 +0200
+
 univention-system-setup (8.1.14-1) unstable; urgency=low
 
   * Bug #35654: remove BasisPage
