--- a/services/univention-printquota/debian/changelog
+++ b/services/univention-printquota/debian/changelog
@@ -1,3 +1,9 @@
+univention-printquota (7.0.0-2) unstable; urgency=low
+
+  * Config Update (Bug #36114) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 14:12:06 +0200
+
 univention-printquota (7.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #36114) 
