new menu colors (Bug #35934)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54532 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.3-6) unstable; urgency=low
+
+  * new menu colors (Bug #35934) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 14:23:43 +0200
+
 univention-grub (8.0.3-5) unstable; urgency=low
 
   * new menu colors (Bug #35934) 
