--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.45-1) unstable; urgency=low
+
+  * Bug #35654: move some CSS from frontend into theme
+
+ -- Florian Best <best@univention.de>  Thu, 16 Oct 2014 15:55:51 +0200
+
 univention-management-console-frontend-theme (0.0.44-1) unstable; urgency=medium
 
   * Bug #35654: add media queries for dynamic grid height
