* Bug #35654: fix _onShow when switching from overview to module * remove value from module search bar when selecting a category
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54539 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (4.1.48-1) unstable; urgency=low
+
+  * Bug #35654: fix _onShow when switching from overview to module
+  * remove value from module search bar when selecting a category
+
+ -- Florian Best <best@univention.de>  Thu, 16 Oct 2014 15:56:37 +0200
+
 univention-management-console-frontend (4.1.47-1) unstable; urgency=low
 
   * Bug #35654: small fixes
