* Sort AMI list (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54540 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.3-9) unstable; urgency=low
+
+  * Sort AMI list (Bug #32842) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 16 Oct 2014 16:00:23 +0200
+
 univention-virtual-machine-manager-daemon (4.0.3-8) unstable; urgency=low
 
   * Fixed EC2 instance-image name not shown (Bug #36145)
