--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.6-9) unstable; urgency=medium
+
+  * Bug #31907: Improve readability of rootdn configuration in slapd.conf
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Oct 2014 16:12:19 +0200
+
 univention-ldap (11.0.6-8) unstable; urgency=medium
 
   * Bug #31907: Revert change of version 11.0.6-2:
