--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (4.1.10-1) unstable; urgency=low
+
+  * Bug #35654: convert svgz → svg
+
+ -- Florian Best <best@univention.de>  Thu, 16 Oct 2014 16:19:16 +0200
+
 univention-management-console-module-appcenter (4.1.9-1) unstable; urgency=low
 
   * Bug #35654: move buttons and icon into left area
