--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.11-1) unstable; urgency=low
+
+  * Bug #35654: move close button into nav area
+
+ -- Florian Best <best@univention.de>  Thu, 16 Oct 2014 16:54:13 +0200
+
 univention-updater (10.0.10-1) unstable; urgency=medium
 
   * postup.sh: Switch from OpenJDK 6 to OpenJDK 7 (Bug #35382)
