remove php5-suhosin during update to UCS 4.0-0 (Bug #35203)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54548 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.12-1) unstable; urgency=low
+
+  * remove php5-suhosin during update to UCS 4.0-0 (Bug #35203) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 17:16:57 +0200
+
 univention-updater (10.0.11-1) unstable; urgency=low
 
   * Bug #35654: move close button into nav area
