--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.28-1) unstable; urgency=medium
+
+  * Adjust test for Bug #31907
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Oct 2014 17:25:27 +0200
+
 ucs-test (5.0.27-1) unstable; urgency=medium
 
   * 43_proxy/02_squid3_without_cache_restart: Merge r54351 from UCS 3.2:
