--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.14-3) unstable; urgency=low
+
+  * Bug #35653: Fix ad setup script
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 16 Oct 2014 17:45:39 +0200
+
 univention-system-setup (8.1.14-2) unstable; urgency=low
 
   * Bug #35653: Fix domainname for systems that do not want to join
