--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.16-8) unstable; urgency=medium
+
+  * disable SSLv2 and SSLv3 (Bug #36173)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 16 Oct 2014 17:08:43 +0200
+
 univention-apache (6.0.16-7) unstable; urgency=low
 
   * place ucs overview entries without priorty at the end
