--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.4-2) unstable; urgency=low
+
+  * fixed join script (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 16 Oct 2014 17:55:03 +0200
+
 univention-printserver (8.0.4-1) unstable; urgency=low
 
   * updated config files (Bug #33278) 
