--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.29-1) unstable; urgency=medium
+
+  * univention/testing/udm.py: also catch OSError exception (Bug #36221)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 17 Oct 2014 09:00:15 +0200
+
 ucs-test (5.0.28-1) unstable; urgency=medium
 
   * Adjust test for Bug #31907
