removed lmhash ucr var description and default (Bug #32584)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54563 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.17-1) unstable; urgency=low
+
+  * removed lmhash ucr var description and default (Bug #32584) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 17 Oct 2014 09:21:42 +0200
+
 univention-directory-manager-modules (10.0.16-1) unstable; urgency=medium
 
   * users/user: escape the share path filter (Bug #35953)
