--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.30-1) unstable; urgency=medium
+
+  * 20_appcenter/20_can_apps_be_installed: removed the apptest flag
+    (Bug #36223)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 17 Oct 2014 12:13:20 +0200
+
 ucs-test (5.0.29-1) unstable; urgency=medium
 
   * univention/testing/udm.py: also catch OSError exception (Bug #36221)
