* 00_base/45license_v2: Added more debug (Bug #35221)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@54573 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.171-2) unstable; urgency=medium
+
+  * 00_base/45license_v2: Added more debug (Bug #35221)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 17 Oct 2014 12:28:26 +0200
+
 ucs-test (4.0.171-1) unstable; urgency=low
 
    * Bug #35900: use utc time instead of local time
