--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.31-1) unstable; urgency=medium
+
+  * 00_base/45license_v2: Added more debug (Bug #35221)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 17 Oct 2014 12:28:26 +0200
+
 ucs-test (5.0.30-1) unstable; urgency=medium
 
   * 20_appcenter/20_can_apps_be_installed: removed the apptest flag
