--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,8 +1,9 @@
-univention-apache (6.0.16-8) unstable; urgency=medium
+univention-apache (6.0.16-9) unstable; urgency=medium
 
   * disable SSLv2 and SSLv3 (Bug #36173)
+  * add apache2/ssl/v2 and apache2/ssl/v3 to configure SSL protocols (Bug #36173)
 
- -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 16 Oct 2014 17:08:43 +0200
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 17 Oct 2014 12:44:42 +0200
 
 univention-apache (6.0.16-7) unstable; urgency=low
 
