--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.4-3) unstable; urgency=low
+
+  * add conflict to console-tools (Bug #36224) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 17 Oct 2014 13:23:56 +0200
+
 univention-base-files (4.0.4-2) unstable; urgency=low
 
   * added kbd to base packages (Bug #36224) 
