Bug #35654: * added padding for tables * fixed nested TitlePanes * link styling * adapted form element borders
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54589 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,13 @@
+univention-management-console-frontend-theme (0.0.47-1) unstable; urgency=low
+
+  Bug #35654:
+  * added padding for tables
+  * fixed nested TitlePanes
+  * link styling
+  * adapted form element borders
+
+ -- Johannes Keiser <keiser@univention.de>  Fri, 17 Oct 2014 14:47:59 +0200
+
 univention-management-console-frontend-theme (0.0.46-1) unstable; urgency=medium
 
   Bug #35654:
