* Bug #35654: adapt startup wizard graphics
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54590 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.49-1) unstable; urgency=medium
+
+  * Bug #35654: adapt startup wizard graphics
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 17 Oct 2014 14:28:19 +0200
+
 univention-management-console-frontend (4.1.48-1) unstable; urgency=low
 
   * Bug #35654: fix _onShow when switching from overview to module
