removed last commit (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54591 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.1.14-5) unstable; urgency=low
+
+  * removed last commit (Bug #36224) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 17 Oct 2014 14:55:27 +0200
+
 univention-system-setup (8.1.14-4) unstable; urgency=low
 
   * add conflict to console-tools (Bug #36224)
