removed last commit (Bug #36224)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54593 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.4-4) unstable; urgency=low
+
+  * removed last commit (Bug #36224) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 17 Oct 2014 15:01:07 +0200
+
 univention-base-files (4.0.4-3) unstable; urgency=low
 
   * add conflict to console-tools (Bug #36224) 
