--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -2,6 +2,8 @@ univention-server (9.0.0-5) unstable; urgency=low
 
   * added cron job for automatic deactivation of expired user accounts
     (Bug #35088)
+  * added cron job for automatic deactivation of user accounts with
+    expired password (Bug #36215)
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Oct 2014 15:41:07 +0200
 
