--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (5.1.7-1) unstable; urgency=medium
+
+  * Bug #35654: adjust styling of license dialogs
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 17 Oct 2014 17:11:55 +0200
+
 univention-management-console-module-udm (5.1.6-1) unstable; urgency=low
 
   * Bug #35654: convert svgz → svg
