* Bug #35654: hide label nodes in LabelPane if an empty label is given
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54611 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.50-1) unstable; urgency=medium
+
+  * Bug #35654: hide label nodes in LabelPane if an empty label is given
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 17 Oct 2014 17:19:40 +0200
+
 univention-management-console-frontend (4.1.49-1) unstable; urgency=medium
 
   * Bug #35654: adapt startup wizard graphics
