* Bug #35654: minor adjustments for margins and padding
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54612 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.48-1) unstable; urgency=medium
+
+  * Bug #35654: minor adjustments for margins and padding
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 17 Oct 2014 17:27:38 +0200
+
 univention-management-console-frontend-theme (0.0.47-1) unstable; urgency=low
 
   Bug #35654:
