--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.14-1) unstable; urgency=low
+
+  * Bug #35656: Block update with xen-4.1 still installed.
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 17 Oct 2014 17:13:25 +0200
+
 univention-updater (10.0.13-1) unstable; urgency=medium
 
   * Adding univention-samba to the preup package list (Bug #36218)
