--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.172-2) unstable; urgency=medium
+
+  * 53_samba-common/05domain-join-ntlm-auth: added debug (Bug #35335)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 17 Oct 2014 20:59:19 +0200
+
 ucs-test (4.0.172-1) unstable; urgency=low
 
   * Bug #35088: added 25_script_lock_expired_accounts
