--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.51-1) unstable; urgency=medium
+
+  * Bug #35654: add new notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Sun, 19 Oct 2014 02:17:57 +0200
+
 univention-management-console-frontend (4.1.50-1) unstable; urgency=medium
 
   * Bug #35654: hide label nodes in LabelPane if an empty label is given
