--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.49-1) unstable; urgency=medium
+
+  * Bug #35654: add styling for notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Sun, 19 Oct 2014 02:21:51 +0200
+
 univention-management-console-frontend-theme (0.0.48-1) unstable; urgency=medium
 
   * Bug #35654: minor adjustments for margins and padding
