--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.15-1) unstable; urgency=medium
+
+  * Added python-support to the pre update packages (Bug #36228)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sun, 19 Oct 2014 12:44:03 +0200
+
 univention-updater (10.0.14-1) unstable; urgency=low
 
   * Bug #35656: Block update with xen-4.1 still installed.
