--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.16-1) unstable; urgency=medium
+
+  * Added univention-config to the pre update packages (Bug #36229)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sun, 19 Oct 2014 12:47:51 +0200
+
 univention-updater (10.0.15-1) unstable; urgency=medium
 
   * Added python-support to the pre update packages (Bug #36228)
