* Added mingetty and parted to maintained (Bug #36231)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54627 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.3-1) unstable; urgency=medium
+
+  * Added mingetty and parted to maintained (Bug #36231)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 20 Oct 2014 06:59:58 +0200
+
 univention-dvd (0.2.2-1) unstable; urgency=medium
 
   * The package console-tools is needed for the update (Bug #36206)
