--- a/mail/univention-antivir-mail/debian/changelog
+++ b/mail/univention-antivir-mail/debian/changelog
@@ -1,3 +1,9 @@
+univention-antivir-mail (6.0.0-2) unstable; urgency=low
+
+  * added PidFile to freshclam.conf (Bug #35264)
+
+ -- Felix Botner <botner@univention.de>  Mon, 20 Oct 2014 11:22:48 +0200
+
 univention-antivir-mail (6.0.0-1) unstable; urgency=medium
 
   * Update to UCS 4.0 (Bug #35264)
