--- a/base/univention-bootsplash/debian/changelog
+++ b/base/univention-bootsplash/debian/changelog
@@ -1,3 +1,9 @@
+univention-bootsplash (6.0.1-4) unstable; urgency=low
+
+  * new bootsplash layout (Bug #35935) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 20 Oct 2014 11:25:00 +0200
+
 univention-bootsplash (6.0.1-3) unstable; urgency=low
 
   * new bootsplash layout (Bug #35935) 
