--- a/desktop/univention-kde/debian/changelog
+++ b/desktop/univention-kde/debian/changelog
@@ -1,3 +1,9 @@
+univention-kde (9.0.2-4) unstable; urgency=low
+
+  * ksplash theme update (Bug #35936) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 20 Oct 2014 12:31:13 +0200
+
 univention-kde (9.0.2-3) unstable; urgency=low
 
   * ksplash theme update (Bug #35936)
