--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,10 @@
+univention-server (10.0.2-1) unstable; urgency=low
+
+  * added cron job for automatic deactivation of expired user accounts
+    (Bug #35088)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Oct 2014 15:41:07 +0200
+
 univention-server (10.0.1-3) unstable; urgency=low
 
   * Bug #35635: Fix UCR variable quoting
