--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (11.0.7-1) unstable; urgency=medium
+
+  * added new LDAP indices for shadowMax and shadowExpire
+    (Bug #35088, #36215)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Oct 2014 15:38:14 +0200
+
 univention-ldap (11.0.6-10) unstable; urgency=medium
 
   * Bug #31907: We need *some* rootdn to be set for ppolicy,
