--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.18-1) unstable; urgency=low
+
+  * added script for automatic deactivation of expired user accounts
+    (Bug #35088)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Oct 2014 15:46:22 +0200
+
 univention-directory-manager-modules (10.0.17-1) unstable; urgency=low
 
   * removed lmhash ucr var description and default (Bug #32584) 
