--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -2,6 +2,8 @@ univention-directory-manager-modules (10.0.18-1) unstable; urgency=low
 
   * added script for automatic deactivation of expired user accounts
     (Bug #35088)
+  * added script for automatic deactivation of user accounts with
+    expired password (Bug #36215)
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 16 Oct 2014 15:46:22 +0200
 
