* Add shell/samba.sh (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54653 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.3-5) unstable; urgency=medium
+
+  * Add shell/samba.sh (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 13:26:19 +0200
+
 univention-lib (4.0.3-4) unstable; urgency=low
 
   * Bug #35716: Allow finer grained log control in PackageManager
