--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.33-1) unstable; urgency=medium
+
+  * Adjust samba4 detection criterion to Samba 4.2 (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 13:32:19 +0200
+
 ucs-test (5.0.32-1) unstable; urgency=medium
 
   * 53_samba-common/05domain-join-ntlm-auth: added debug (Bug #35335)
