* Bug #31907: Add some debug
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54657 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.33-2) unstable; urgency=medium
+
+  * Bug #31907: Add some debug
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 14:03:07 +0200
+
 ucs-test (5.0.33-1) unstable; urgency=medium
 
   * Adjust samba4 detection criterion to Samba 4.2 (Bug #35319)
