* Bug #35654: add final styling for notifications
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54659 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.50-1) unstable; urgency=medium
+
+  * Bug #35654: add final styling for notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 14:39:17 +0200
+
 univention-management-console-frontend-theme (0.0.49-1) unstable; urgency=medium
 
   * Bug #35654: add styling for notifications
