--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.51-2) unstable; urgency=medium
+
+  * Bug #35654: add more sophisticated handling for notifications
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 14:39:46 +0200
+
 univention-management-console-frontend (4.1.51-1) unstable; urgency=medium
 
   * Bug #35654: add new notifications
