--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.4-1) unstable; urgency=low
+
+  * Bug #36238: Depends on univention-archive-key
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 20 Oct 2014 14:41:07 +0200
+
 univention-dvd (0.2.3-1) unstable; urgency=medium
 
   * Added mingetty and parted to maintained (Bug #36231)
