--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.7-1.1) unstable; urgency=medium
+
+  * Remove scalix.schema (Bug #28693)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 15:14:11 +0200
+
 univention-ldap (11.0.7-1) unstable; urgency=medium
 
   * added new LDAP indices for shadowMax and shadowExpire
