* Abort update in case attributes from the scalix schema are stil present   (Bug #28693)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54666 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,10 @@
+univention-updater (10.0.17-1) unstable; urgency=medium
+
+  * Abort update in case attributes from the scalix schema are stil present
+    (Bug #28693)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 15:22:39 +0200
+
 univention-updater (10.0.16-1) unstable; urgency=medium
 
   * Added univention-config to the pre update packages (Bug #36229)
