* Bug #35654: redraw Grid when window resizes
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54668 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.53-1) unstable; urgency=medium
+
+  * Bug #35654: redraw Grid when window resizes
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 15:50:51 +0200
+
 univention-management-console-frontend (4.1.52-1) unstable; urgency=medium
 
   * Bug #35654: add more sophisticated handling for notifications
