Bug #33694 KVM: Disable bridge creation by default
Update to rename from libvirt-bin to libvirtd.
Update template file from Debian-Wheezy.
debian/control: Remove Andreas Büsching.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54669 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,12 @@
+univention-virtual-machine-manager-node (3.0.2-1) unstable; urgency=low
+
+  * Bug #33694: Disable bridge creation by default
+  * Update to rename from libvirt-bin to libvirtd.
+  * Update template file from Debian-Wheezy.
+  * debian/control: Remove Andreas Büsching.
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 20 Oct 2014 16:03:49 +0200
+
 univention-virtual-machine-manager-node (3.0.1-1) unstable; urgency=low
 
   * Bug #35656 UVMM: Drop Xen support
