* Fix typo (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54671 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.33-5) unstable; urgency=medium
+
+  * Fix typo (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 16:54:12 +0200
+
 ucs-test (5.0.33-4) unstable; urgency=medium
 
   * Adjust python implementation wait_for_drs_replication to skip
