--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.54-1) unstable; urgency=medium
+
+  * Bug #35654: render overview site with two columns down to a width of 550px
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 17:05:31 +0200
+
 univention-management-console-frontend (4.1.53-1) unstable; urgency=medium
 
   * Bug #35654: redraw Grid when window resizes
