--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.5-2) unstable; urgency=low
+
+  * Added several packages for horde App (Bug #36237) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 20 Oct 2014 17:18:55 +0200
+
 univention-dvd (0.2.5-1) unstable; urgency=low
 
   * Added several packages for horde App (Bug #36237) 
