* Handle smb.conf and shares.conf 4.2 changes in samba-shares listener   (Bug #35319)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54678 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba (9.0.3-3) unstable; urgency=medium
+
+  * Handle smb.conf and shares.conf 4.2 changes in samba-shares listener
+    (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Oct 2014 17:26:57 +0200
+
 univention-samba (9.0.3-2) unstable; urgency=medium
 
   * Use shell-univention-lib (Bug #35319)
