--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (10.0.18-1) unstable; urgency=low
+
+  * Block update if old univention-horde4 is installed (Bug #36237) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 20 Oct 2014 17:30:03 +0200
+
 univention-updater (10.0.17-1) unstable; urgency=medium
 
   * Abort update in case attributes from the scalix schema are stil present
