--- a/management/univention-management-console-frontend-theme/debian/changelog
+++ b/management/univention-management-console-frontend-theme/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-theme (0.0.52-1) unstable; urgency=medium
+
+  * Bug #35654: add margin to umcPageNav container
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 17:38:22 +0200
+
 univention-management-console-frontend-theme (0.0.51-1) unstable; urgency=medium
 
   * Bug #35654: added bootstrap like CSS classes col-xxs-*  
