* Bug #35654: adjust UCS activiation icon in StartupWizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@54681 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.1.56-1) unstable; urgency=medium
+
+  * Bug #35654: adjust UCS activiation icon in StartupWizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 20 Oct 2014 17:44:38 +0200
+
 univention-management-console-frontend (4.1.55-1) unstable; urgency=medium
 
   * Bug #35654: adapt LiveSearchSidebar to responsive design
